# PV_BESS_Optimizer

./: main.py  pv_bess_annual_example.ipynb  pv_bess_annual_three_market_example.ipynb  pv_bess_annual_three_market_example_julia.ipynb  pv_bess_example.ipynb  pyproject.toml  requirements.txt  scheduler.py  scheduler_three_market.jl  scheduler_three_market.py  test.py
Projects/Grabowhöfe/: pv_bess_annual_three_market_example.ipynb  scheduler_three_market.py
Projects/Lalendorf/: calculate_difference_capture_price_vs_spot_market_price_energy2market.ipynb  pv_bess_annual_three_market_example.ipynb  trader_comparison_capture_price_vs_spot_market_basis.ipynb
Projects/Lalendorf/data/: 2025_pv.csv
Projects/Senftenberg/: pv_bess_annual_three_market_example.ipynb
Projects/Vergleichsrechnung/: main.py  pv_bess_annual_three_market_example.ipynb  pyproject.toml
Projects/Wuelknitz/: pv_bess_annual_three_market_example.ipynb  pyproject.toml  scheduler_three_market.py  scheduler_three_market_market_premium.py
_data/2024/PV/: 2024_pv.csv
data/2024/IDA/: 2024_ida.csv
data/2024/PV/: 2024_pv.csv  Wülknitz Energy Meter Janitza UMG 104 2024.csv
data/2025/ID1/: energy-charts_Stromproduktion_und_Börsenstrompreise_in_Deutschland_in_Woche_14_2025.csv  energy-charts_Stromproduktion_und_Börsenstrompreise_in_Deutschland_in_Woche_22_2025.csv  energy-charts_Stromproduktion_und_Börsenstrompreise_in_Deutschland_in_Woche_32_2025.csv  energy-charts_Stromproduktion_und_Börsenstrompreise_in_Deutschland_in_Woche_33_2025.csv  (+11 more)
data/2025/IDA/: 2025_ida.csv  (+20 more)
data/2025/PV/: 2025_pv.csv  (+2 more)
(+191 files in other folders)
